# sscontrol

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_CN.md  README_ZH.md  build-all.sh  build-macos.sh  build-warnings.txt  build-win.cmd  build-windows.bat  build.cmd  config.toml.example  host-final.txt  host-out.txt  host-out2.txt  host-out3.txt  host-turn.txt  start.sh  test-host.ps1
cloudflare-worker/: README.md  package.json  tsconfig.json  wrangler.toml
cloudflare-worker/src/: index.ts
docs/: analysis.md  deployment-guide.md  deployment.md  integration-test-summary.md  phase1-mvp.md  production-checklist.md  progress.md  roadmap.md
docs/architecture/: overview.md
docs/archive/: doc-cleanup-2026-01-22.md  ui-guide.md
docs/implementation/: setup.md
docs/operations/: quick-ref.md  runbook.md
docs/troubleshooting/: common-issues.md
docs/tutorials/: mac-to-windows-lan.md
examples/: benchmark.rs  latency_test.rs  secure_server.rs  signaling_server.rs  test_capture.rs  test_encoder.rs  test_server.rs  webrtc_client.rs  webrtc_example.rs
scripts/: generate-icons.sh  install_linux.sh  install_macos.sh  install_windows.ps1
src/: cli.rs  commands.rs  config.rs  connect_mode.rs  host_mode.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  connection.rs  mod.rs  screen.rs  service.rs
src/capture/: macos.rs  mod.rs  windows.rs  windows_dxgi.rs
src/connection/: mod.rs
src/deploy/: mod.rs  signaling_deploy.rs  ssh.rs  templates.rs
src/discovery/: connection_code.rs  mdns.rs  mod.rs
src/encoder/: amf.rs  hardware.rs  mod.rs  nvenc.rs  qsv.rs  videotoolbox.rs
src/input/: macos.rs  mod.rs  windows.rs
src/nat/: detector.rs  mod.rs  predictive_punching.rs
src/network/: mod.rs
src/pairing/: mod.rs  qr.rs
src/quality/: adaptive_bitrate.rs  mod.rs  roi_encoder.rs  static_detector.rs
src/security/: auth.rs  mod.rs  tls.rs  token.rs
src/service/: linux.rs  macos.rs  mod.rs  windows.rs
src/signaling/: cloudflare.rs  embedded.rs  mod.rs
src/tools/: diagnostic.rs  mod.rs
src/tunnel/: cloudflare.rs  mod.rs
src/viewer/: mod.rs  web.rs
src/webrtc/: host_session.rs  mod.rs  peer_connection.rs  signaling.rs  video_track.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/lib/: api.ts  store.ts
ui/src/pages/: Configuration.tsx  Dashboard.tsx  ScreenSelect.tsx  ServiceManager.tsx
