[package]
name = "sscontrol"
version = "0.1.0"
edition = "2021"
authors = ["sscontrol"]
description = "A headless remote desktop application built in Rust"

[features]
default = []
h264 = ["ffmpeg-next"]  # H.264 编码器 (需要 FFmpeg)
webrtc = ["dep:webrtc", "dep:bytes"]  # WebRTC 支持 (使用 webrtc-rs)
security = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-native-certs"]  # 安全特性 (TLS 和认证)
service = []  # 系统服务特性 (Windows Service / macOS LaunchAgent / Linux systemd)
ui = []  # GUI 特性 (用于 Tauri 集成)
discovery = ["dep:mdns-sd", "dep:base32", "dep:crc", "dep:reqwest", "dep:x25519-dalek", "dep:argon2", "dep:hostname"]  # 设备发现 (保留用于未来扩展)
tunnel = ["dep:cloudflared"]  # 公网隧道 (Cloudflare Tunnel)

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# WebSocket
tungstenite = "0.21"
url = "2.5"

# Video encoding (optional, use --features h264 to enable)
ffmpeg-next = { version = "8.0", optional = true }

# WebRTC (optional, use --features webrtc to enable)
webrtc = { version = "0.12", optional = true }
bytes = { version = "1.5", optional = true }

# Security (optional, use --features security to enable)
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.23", optional = true, features = ["ring"] }
rustls-pemfile = { version = "2.0", optional = true }
rustls-native-certs = { version = "0.7", optional = true }

# Authentication (always available for HMAC token generation)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Discovery and zero-config connection (optional, use --features discovery to enable)
mdns-sd = { version = "0.11", optional = true }
base32 = { version = "0.5", optional = true }
crc = { version = "3.2", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
argon2 = { version = "0.5", optional = true }
hostname = { version = "0.4", optional = true }

# Tunnel (optional, use --features tunnel to enable)
cloudflared = { version = "0.0.3", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP REST API (for local signaling server)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

# Windows specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    # DXGI Desktop Duplication API
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
]}
windows-service = "0.7"
widestring = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sscontrol"
path = "src/main.rs"

